Fixes nested fieldset headings and strange spacing on guide.

--- a/_sass/base/_styleguide.scss
+++ b/_sass/base/_styleguide.scss
@@ -3,7 +3,6 @@
   text-align: left;
 
   > section {
-    margin-top: 3em;
     text-align: left;
 
     > h1 {
